fix(community benefits): New hero and text change

--- a/community-benefits.htm
+++ b/community-benefits.htm
@@ -16,7 +16,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 	<link rel="stylesheet"
@@ -42,9 +42,9 @@
 
 				<!-- Hero -->
 				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
-					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2024/wyoming-business-owner-clark-in-front-of-store-800x485.jpg"
+					<img src="assets/images/ts-bighorn-rea-4419-1200w.jpg"
 						alt="Wyoming business owner in front of store"
-						class="absolute inset-0 w-full h-full object-cover z-0" />
+						class="absolute inset-0 w-full h-full object-cover z-0" style="object-position: center 70%;" />
 					<div
 						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 						<h1 class="text-4xl md:text-5xl font-serif text-balance">
@@ -67,10 +67,10 @@
 							collaboration and accountable action, Tri-State delivers benefits that enhance communities'
 							quality of
 							life, stimulate economic growth, and support sustainable development. By aligning our energy
-							projects
-							with community needs and maximizing the impact of our investments, we strengthen trust,
-							create shared
-							value, and ensure Tri-State remains a catalyst for positive change.
+							projects with community needs and maximizing the impact of our investments, we strengthen
+							trust,
+							create shared value, and ensure that Tri-State and our cooperative family remains a catalyst
+							for positive change.
 						</p>
 					</div>
 				</section>
@@ -160,7 +160,7 @@
 										alt="Community Benefits" class="absolute h-full w-full object-cover">
 									<figcaption
 										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
-										We're lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Delivering power across the West
 									</figcaption>
 								</figure>
 							</div>
