fix(comben): hero url

--- a/community-benefits.htm
+++ b/community-benefits.htm
@@ -42,7 +42,7 @@
 
 				<!-- Hero -->
 				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
-					<img src="assets/images/ts-bighorn-rea-4419-1200w.jpg"
+					<img src="https://tristate.coop/sites/default/files/images/ts-bighorn-rea-4419-1200w.jpg"
 						alt="Wyoming business owner in front of store"
 						class="absolute inset-0 w-full h-full object-cover z-0" style="object-position: center 70%;" />
 					<div
