fix(obr): add gray bg to section

--- a/obr.htm
+++ b/obr.htm
@@ -317,7 +317,8 @@
 				class="absolute inset-0 w-full h-full object-cover" />
 		</div>
 
-		<div class="gap-4 px-8 py-16 grid place-content-center sm:col-span-3 sm:py-16 sm:px-6 lg:p-16">
+		<div class="gap-4 px-8 py-16 grid place-content-center sm:col-span-3 sm:py-16 sm:px-6 lg:p-16"
+			style="background-color: #F5F5F5;">
 
 			<div class="text-3xl font-serif">See if you qualify for a <strong class="inline-block">no-cost</strong>
 				option.</div>
