fix(obr): remote file paths

--- a/obr.htm
+++ b/obr.htm
@@ -82,8 +82,8 @@
 			<!-- Image -->
 			<div class=" md:col-start-2 md:row-start-1 md:row-span-2">
 				<div class="relative mb-6 h-44 rounded-lg border border-gray md:h-full">
-					<img src="assets/images/ts-bighorn-rea-4804-800x800.jpg" alt=""
-						class="absolute inset-0 object-cover object-top w-full h-full rounded-lg">
+					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/ts-bighorn-rea-4804-800x800.jpg"
+						alt="" class="absolute inset-0 object-cover object-top w-full h-full rounded-lg">
 				</div>
 			</div>
 
@@ -217,9 +217,10 @@
 						d="M256 0c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32zM0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32zM120.2 75C107.7 62.5 87.5 62.5 75 75s-12.5 32.8 0 45.3l45.3 45.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L120.2 75z">
 					</path>
 				</svg></div>
-			<img src="assets/images/form-desktop.png" alt="" class="absolute w-4/5 h-auto max-w-3xl hideme md:block"
-				data-screenshot />
-			<img src="assets/images/form-mobile.png" alt="" class="absolute w-4/5 h-auto md:hideme" data-screenshot />
+			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/form-desktop.png" alt=""
+				class="absolute w-4/5 h-auto max-w-3xl hideme md:block" data-screenshot />
+			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/form-mobile.png" alt=""
+				class="absolute w-4/5 h-auto md:hideme" data-screenshot />
 		</div>
 		<!-- Middle Layer: Green triangle -->
 		<div class="col-start-1 row-start-1 relative" data-peek-content>
@@ -241,7 +242,8 @@
 			<div class="w-1/2 pr-8 flex flex-col justify-center items-end text-center space-y-6 md:w-3/5">
 				<!-- Blue badge -->
 				<div class="my-4 flex-shrink-0">
-					<img src="assets/images/obr-badge-full-white.svg" alt="" class=" mr-12" data-cta-badge />
+					<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/obr-badge-full-white.svg"
+						alt="" class=" mr-12" data-cta-badge />
 				</div>
 
 				<!-- Phone CTA -->
@@ -313,8 +315,8 @@
 	<section class="min-h-96 sm:grid sm:grid-cols-5">
 
 		<div class="relative aspect-video sm:aspect-auto sm:h-full sm:col-span-2 sm:order-last">
-			<img src="assets/images/gettyimages-1407175869-heatpump-700x500.jpeg" alt="FPO"
-				class="absolute inset-0 w-full h-full object-cover" />
+			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/gettyimages-1407175869-heatpump-700x500.jpeg"
+				alt="FPO" class="absolute inset-0 w-full h-full object-cover" />
 		</div>
 
 		<div class="gap-4 px-8 py-16 grid place-content-center sm:col-span-3 sm:py-16 sm:px-6 lg:p-16"
