--- a/obr.htm
+++ b/obr.htm
@@ -328,7 +328,7 @@
 
 			<div>We’re glad you’re interested in the Electrify & Save On-Bill Repayment Program—however, you may qualify
 				for free energy
-				efficiency and electrification services based on your income. please review the table below to see
+				efficiency and electrification services based on your income. Please review the table below to see
 				whether you qualify
 				for additional programs or discounts based on your income. We want to make sure we’re offering you the
 				lowest cost
