fix(wildfire): missing content

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -135,7 +135,7 @@
 				<p>
 					Tri-State has a dedicated internal wildfire steering committee and we host an annual wildfire
 					summit. In addition to state and federal organizations, we are also members of the Western Regional
-					Mutual Assistance Agreement and coordinate relief during large
+					Mutual Assistance Agreement and coordinate relief during large-scale emergencies.
 				</p>
 			</div>
 		</div>
