fix(operations): update page title, font import, and external resource links
- Corrected page title and Google Fonts import syntax
- Updated several button and resource links to use real URLs instead of placeholders
- Improved consistency and accessibility of action links

--- a/operations.htm
+++ b/operations.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>DEV: Members</title>
+	<title>DEV: Operations</title>
 	<style>
 		body {
 			max-width: 1200px;
@@ -15,7 +15,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet" />
 
 	<!-- Global Styles -->
 	<link rel="stylesheet"
@@ -94,16 +94,17 @@
 									Our members benefit from a diverse mix of energy resources, including
 									low-cost, emissions-free renewable energy, and a reliable fleet of coal and natural
 									gas
-									power plants. We have 20+ generation facilities in our portfolio with more on the
-									way.
+									power plants. We have 20+ generation facilities in our portfolio with <a
+										href="#">more on the
+										way</a>.
 									Members also have the option to self-supply a portion of their power needs so they
 									can
 									better meet the goals of the communities they serve.
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/our-energy-mix"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
-										Learn More
+										Our energy mix
 									</a>
 								</p>
 							</div>
@@ -294,11 +295,11 @@
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
 								Electric Resource Plan
 							</a>
-							<a href="#"
+							<a href="https://tristate.coop/financials"
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
 								Financials
 							</a>
-							<a href="#"
+							<a href="https://tristate.coop/dark-fiber"
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
 								Dark Fiber
 							</a>
