fix(about): font fix and upgrade stats styling

--- a/about-us.htm
+++ b/about-us.htm
@@ -15,7 +15,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet" />
 
 	<!-- Global Styles -->
 	<link rel="stylesheet"
@@ -243,7 +243,7 @@
 					class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] sm:grid sm:place-content-center lg:px-16 lg:py-24">
 					<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">450+</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">450+</p>
 							<p>
 								Employee volunteer hours used in
 								2024. Tri-State gives each employee
@@ -253,7 +253,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">$265,516</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">$265,516</p>
 							<p>
 								conated to 78 charities and
 								organizations through Tri-State’s
@@ -262,7 +262,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">50+</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">50+</p>
 							<p>
 								community events co-sponsored with
 								our members in 2024, including various
