fix(home): improve font import, add real links to member list and energy mix, update stats section styles

--- a/home.htm
+++ b/home.htm
@@ -9,7 +9,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet" />
 
 	<!-- Global Styles -->
 	<link rel="stylesheet"
@@ -69,9 +69,10 @@
 
 								</h2>
 								<p>
-									As a wholesale power supplier to our members, dozens of
-									electric utilities across rural Colorado, Nebraska, New
-									Mexico and Wyoming, we have a fleet of electric resources.
+									As a wholesale power supplier to our members, <a
+										href="https://tristate.coop/member-list"> of
+										electric utilities across rural Colorado, Nebraska, New
+										Mexico and Wyoming</a>, we have a fleet of electric resources.
 									They include natural gas, wind and solar facilities. We also
 									own and operate nearly 6,000 miles of transmission line to
 									move that power.
@@ -94,16 +95,17 @@
 					<div
 						class="grid gap-y-12 max-w-4xl m-auto sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4 md:gap-16">
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">70%</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">70%</p>
 							<p>
 								of our members’ energy mix will
 								come from clean resources in 2030.
-								Learn about our energy mix.
+								<a href="https://tristate.coop/our-energy-mix" class="text-white">Learn about our energy
+									mix</a>.
 							</p>
 						</div>
 
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">1M+</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">1M+</p>
 							<p>
 								homes and businesses powered in
 								Colorado, Nebraska, New Mexico
@@ -112,7 +114,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">50+</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">50+</p>
 							<p>
 								years in operation. Together with our
 								members, we’ve been serving th
@@ -155,7 +157,7 @@
 									renewables—that’s the cooperative difference.
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/member-list"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
 										Our members
 									</a>
