chore(energy mix): split energy mix into v1 and v2

--- a/our-energy-mix-v1.htm
+++ b/our-energy-mix-v1.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>DEV: Our Energy Mix</title>
+	<title>DEV: Our Energy Mix v1</title>
 	<style>
 		body {
 			max-width: 1200px;
