fix(energy mix): finalize split

--- a/our-energy-mix-v2.htm
+++ b/our-energy-mix-v2.htm
@@ -308,7 +308,7 @@
 					class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] sm:grid sm:place-content-center lg:px-16 lg:py-24">
 					<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">1,250 MW</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">1,250 MW</p>
 							<p>
 								We're adding 1,250 megawatts
 								of renewables and battery
@@ -319,7 +319,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">2 GW</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">2 GW</p>
 							<p>
 								Together with production from
 								wind energy, Tri-State will deliver
@@ -329,7 +329,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="text-2xl font-bold">$9.5M</p>
+							<p class="font-serif text-3xl font-light sm:text-4xl">$9.5M</p>
 							<p>
 								Recently completed Escalante
 								Solar boosts tax revenue in
@@ -757,71 +757,6 @@
 					</div>
 
 				</section>
-
-
-				<!-- SLIDER -->
-				<section style="--swiper-theme-color: #3d4d55; --swiper-pagination-bottom: auto">
-					<div class="swiper h-[432px] pb-8">
-						<div class="swiper-wrapper">
-							<!-- SLIDE 1 : QUOTE -->
-							<div class="swiper-slide sm:w-2/3">
-								<div
-									class="flex items-center justify-center relative h-full w-full text-[#3d4d55] bg-white overflow-hidden">
-									<span
-										class="absolute top-0 left-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top -translate-y-1/4 z-0"
-										style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px)"></span>
-									<span
-										class="absolute bottom-0 right-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top z-0"
-										style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px); transform: rotate(180deg) translate(0%, -25%)"></span>
-									<figure class="grid place-content-center p-6 relative z-10 min-h-[400px] lg:px-12">
-										<blockquote
-											class="m-0 p-0 border-0 font-bold text-justify text-gray-900 lg:text-lg lg:leading-tight">
-											What we're building now is going to serve our members into the 2060s. It's
-											not just our kids, but our grandkids. They're going to benefit from what
-											we're building today.
-										</blockquote>
-										<figcaption
-											class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif leading-tight">
-											Duane Highley, Tri-State CEO
-										</figcaption>
-									</figure>
-								</div>
-							</div>
-
-							<!-- SLIDE 2 : IMAGE WITH CAPTION -->
-							<div class="swiper-slide sm:w-2/3">
-								<figure class="relative w-full h-full">
-									<img src="https://tristate.coop/sites/default/files/images/escalante-solar-800x485.jpg"
-										alt="Escalante Solar Project" class="absolute h-full w-full object-cover">
-									<figcaption
-										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
-										200 MW Escalante Solar Project near Grants, New Mexico
-									</figcaption>
-								</figure>
-							</div>
-
-							<!-- SLIDE 3 : IMAGE WITH CAPTION -->
-							<div class="swiper-slide sm:w-2/3">
-								<figure class="relative w-full h-full">
-									<img src="https://tristate.coop/sites/default/files/blog/content-images/0524%20Susan%20Hunter_Blog1_1200x628.jpg"
-										alt="Diversifying Our Portfolio" class="absolute h-full w-full object-cover">
-									<figcaption
-										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
-										<a href="https://tristate.coop/susan-hunter-annual-report-2023"
-											class="text-white hover:text-white">
-											Diversifying Our Portfolio - <u>Learn More</u>
-										</a>
-									</figcaption>
-								</figure>
-							</div>
-						</div>
-
-						<div class="swiper-pagination h-8">&nbsp;</div>
-						<div class="swiper-button-prev">&nbsp;</div>
-						<div class="swiper-button-next">&nbsp;</div>
-					</div>
-				</section>
-				<!-- /SLIDER -->
 			</div>
 			</section>
 
