--- a/our-energy-mix-v1.htm
+++ b/our-energy-mix-v1.htm
@@ -304,42 +304,41 @@
 				</section>
 
 				<!-- Stats -->
-				<section
-					class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] sm:grid sm:place-content-center lg:px-16 lg:py-24">
-					<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
-						<div class="space-y-2">
-							<p class="text-2xl font-bold">1,250 MW</p>
-							<p>
-								We're adding 1,250 megawatts
-								of renewables and battery
-								storage between 2026 and 2031
-								to meet system needs and meet
-								emissions goals.
-							</p>
+				<section class="bg-navy text-white px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
+					<div class="mx-auto max-w-2xl space-y-8">
+						<h2 class="font-serif font-light text-3xl">Our recent renewable projects</h2>
+
+						<div class="flex flex-wrap justify-center text-center">
+							<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
+								<div class="text-lg font-semibold">110MW</div>
+
+								<div>Dolores Canyon Solar, Colorado<br><em>(upcoming)</em></div>
+							</div>
+
+							<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
+								<div class="text-lg font-semibold">145MW&nbsp;</div>
+
+								<div>Axial Basin Solar, Colorado<br><em>(upcoming)</em></div>
+							</div>
+
+							<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
+								<div class="text-lg font-semibold">200MW</div>
+
+								<div>Escalante Solar, New Mexico</div>
+							</div>
+
+							<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
+								<div class="text-lg font-semibold">100MW</div>
+
+								<div>Spanish Peaks Solar, Colorado</div>
+							</div>
+
+							<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
+								<div class="text-lg font-semibold">40MW</div>
+
+								<div>Spanish Peaks II, Colorado</div>
+							</div>
 						</div>
-
-						<div class="space-y-2">
-							<p class="text-2xl font-bold">2 GW</p>
-							<p>
-								Together with production from
-								wind energy, Tri-State will deliver
-								over two gigawatts of renewable
-								energy to members in 2025.
-							</p>
-						</div>
-
-						<div class="space-y-2">
-							<p class="text-2xl font-bold">$9.5M</p>
-							<p>
-								Recently completed Escalante
-								Solar boosts tax revenue in
-								McKinley County, NM—including
-								$7.1M in taxes to the county and
-								$2.4M to the school district
-							</p>
-						</div>
-
-
 					</div>
 				</section>
 
